[project]
name = "recursive_rpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Imam-f", email = "mohamadimamfirdaus17@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.5.1",
    "python-dotenv>=1.1.1",
    "rpyc>=6.0.2",
    "scp>=0.15.0",
    "uv>=0.7.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
