[project]
name = "recursiverpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Imam-f", email = "mohamadimamfirdaus17@gmail.com" }
]
requires-python = "~=3.10.16"
dependencies = [
    "paramiko>=3.5.1",
    "plumbum>=1.9.0",
    "rpyc>=6.0.2",
    "uv>=0.7.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
